# pi_labs

./: README.md
Images/: cell1.tif  cells.tif
acpi/: __init__.py  benchmark.py  cli.py  contours.py  exercises.py  noise.py  table.py  viewer.py
lab10/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lab10  main_lab10.cpp  run_lab10.sh  segmentation_helpers.cpp  segmentation_helpers.h
lab11/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lab11  main_lab11.cpp  region_growing.cpp  region_growing.h  run_lab11.sh
lab7/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  lab7  main.cpp  main_save_files.cpp  run_gui.sh  run_lab.sh  save_files
lab8/: CMakeCache.txt  CMakeLists.txt  Complex.h  Makefile  README.md  cmake_install.cmake  image_processing_helpers.h  lab8  main_lab8.cpp  run_lab8.sh
lab9/: CMakeCache.txt  CMakeLists.txt  IMPLEMENTARE.md  Makefile  README.md  cmake_install.cmake  frequency_domain_helpers.cpp  frequency_domain_helpers.h  lab9  main_lab9.cpp  run_lab9.sh
output/edge_detection/prewitt/: cell1_prewitt_gy.tif
output/edge_detection/sobel/: cells_sobel_gy.tif  dowels_sobel_gx.tif  dowels_sobel_gy.tif  dowels_sobel_magnitude.tif
output/zoom_2x/duplication/: cell1_zoom_dup_2x.tif  cells_zoom_dup_2x.tif
output/zoom_arbitrary/bilinear/: cell1_zoom_bilinear_1_5x1_5.tif
python_acpi/: README.md  requirements.txt
python_acpi/Images/: house.pgm
python_acpi/acpi/: contours_table.py  filters.py
python_acpi/output/edge_detection/prewitt/: cell1_prewitt_gx.tif  cell1_prewitt_magnitude.tif  cells_prewitt_gx.tif  cells_prewitt_gy.tif  cells_prewitt_magnitude.tif  dowels_prewitt_gx.tif  dowels_prewitt_gy.tif  dowels_prewitt_magnitude.tif
python_acpi/output/edge_detection/sobel/: cell1_sobel_gx.tif  cell1_sobel_gy.tif  cell1_sobel_magnitude.tif  cells_sobel_gx.tif  cells_sobel_magnitude.tif
python_acpi/output/zoom_2x/linear_interpolation/: cell1_zoom_interp_2x.tif  cells_zoom_interp_2x.tif
python_acpi/output/zoom_arbitrary/nearest_neighbor/: cell1_zoom_nn_1_5x1_5.tif
